Updated versions in pom